--- a/src/main/resources/templates/material/materialList.html
+++ b/src/main/resources/templates/material/materialList.html
@@ -32,12 +32,12 @@
         <table class="table table-hover table-striped">
             <thead>
             <tr>
-                <th>#</th>
+                <th class="ps-3">#</th>
                 <th>원재료명</th>
                 <th>수량</th>
             </tr>
             <tr>
-                <th>입고날짜</th>
+                <th class="ps-3">입고날짜</th>
                 <th>담당직원</th>
                 <th>#</th>
             </tr>
@@ -45,12 +45,12 @@
             <tbody>
             <th:block th:each="material, index : ${paging}">
                 <tr>
-                    <td th:text="${paging.number * paging.size + index.count}" class="text-center">1</td>
+                    <td th:text="${paging.number * paging.size + index.count}" class="ps-3" >1</td>
                     <td th:text="${material.materialName}">EVA</td>
                     <td th:text="${material.materialQuantity}">50</td>
                 </tr>
                 <tr>
-                    <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}">2000-00-00 00:00</td>
+                    <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}" class="ps-3">2000-00-00 00:00</td>
                     <td>관리자</td>
                     <td>
                         <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
