--- a/src/main/resources/templates/monitoring/errorMonitoring.html
+++ b/src/main/resources/templates/monitoring/errorMonitoring.html
@@ -98,8 +98,8 @@
                         {
                             label: "불량품 수",
                             data: err,
-                            borderColor: '#ff5c6c',
-                            backgroundColor: "#ffbab7",
+                            borderColor: '#fd8128',
+                            backgroundColor: "#f8aa70",
                         },
                     ],
                 },
@@ -150,34 +150,34 @@
                     {
                         label: 'OK',
                         data: ok,
-                        borderColor: 'rgba(0, 255, 0, 0.5)',
-                        borderWidth: 1,
+                        borderColor: 'rgb(155,155,253)',
+                        borderWidth: 2,
                         fill: false,
-                        tension: 0.3
+                        tension: 0.1
                     },
                     {
                         label: 'ERR_TEMP',
                         data: errTemp,
-                        borderColor: 'rgba(255, 0, 0, 0.5)',
-                        borderWidth: 1,
+                        borderColor: 'rgb(133,197,241)',
+                        borderWidth: 2,
                         fill: false,
-                        tension: 0.3
+                        tension: 0.1
                     },
                     {
                         label: 'ERR_TIME',
                         data: errTime,
-                        borderColor: 'rgba(0, 0, 255, 0.5)',
-                        borderWidth: 1,
+                        borderColor: 'rgb(253,224,153)',
+                        borderWidth: 2,
                         fill: false,
-                        tension: 0.3
+                        tension: 0.1
                     },
                     {
                         label: '배합실패',
                         data: mixFail,
-                        borderColor: 'rgba(0, 0, 255, 0.5)',
-                        borderWidth: 1,
+                        borderColor: 'rgb(253,160,180)',
+                        borderWidth: 2,
                         fill: false,
-                        tension: 0.3
+                        tension: 0.1
                     }
                 ]
             },
